--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-puzzle",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,8 +9,12 @@
     "lint-style": "stylelint src/**/*scss src/**/*vue"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
+    "uniqid": "^5.0.3",
     "vue": "^2.5.16",
-    "vue-material": "^1.0.0-beta-10.2"
+    "vue-draggable": "^1.0.6",
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-slider-component": "^2.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
